--- a/frontend/.env
+++ b/frontend/.env
@@ -2,6 +2,6 @@ VITE_FIREBASE_API_KEY=AIzaSyCqK3tp6gm-VGyXWZHr47tT07vPMC-JySY
 VITE_FIREBASE_AUTH_DOMAIN=dynamicforms-4e2f5.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=dynamicforms-4e2f5
 VITE_FIREBASE_APP_ID=1:59598341999:web:f2da47257408470e010a9a
-VITE_API_BASE_URL=http://localhost:4000
+VITE_API_BASE_URL=https://dynamicforms-zl8j.onrender.com
 VITE_DEFAULT_FORM_ID=123
 VITE_ADMIN_EMAILS=malikvanshika2004@gmail.com,vinoth.palaniappan@eastencher.com
